# ai_cut

./: .dockerignore  .env.dev.example  .env.prod.example  .gitignore  BUG_ANALYSIS_REPORT.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
apps/admin/: Dockerfile  Dockerfile.prod  index.html  nginx.prod.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/api/: Dockerfile  pyproject.toml
apps/api-spring/: Dockerfile  Dockerfile.prod  pom.xml
apps/api/ai_cut_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/app/: main.py
apps/api/app/routers/: admin.py  generation_v2.py  presets.py  tasks.py  uploads.py
apps/gateway/: nginx.dev.conf  nginx.prod.conf
apps/web/: .npmrc  Dockerfile  Dockerfile.prod  nginx.prod.conf  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/worker/: pyproject.toml
apps/worker/ai_cut_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: app.example.toml  app.toml  app.yml
config/app/: infrastructure.yml  runtime.yml
config/catalog/: defaults.yml  options.yml
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_REFACTOR.md  BRAND_GUIDE.md  CHANGELOG.md  DEPLOY_DOCKER.md  DEVELOPMENT_LOG.md  FRONTEND_FUNCTIONAL_SPEC_FOR_UI.md  MODEL_CONFIG_CHECKLIST.md  README.md  ROADMAP.md  USER_GUIDE.md  mysql_table_design_guideline.md
scripts/: check-gateway-routes.sh  compose-stack.sh  dev-spring.sh  dev.sh  generate-api.sh  verify-architecture.sh
(+677 files in other folders)
