[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cut-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "cryptography>=43.0",
  "pydantic>=2.7",
  "SQLAlchemy>=2.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
  "redis>=5.0",
  "pymysql>=1.1",
]
