# API 应用打包时使用的 setuptools 构建信息。
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# FastAPI 服务的项目元信息和运行时依赖。
[project]
name = "ai-cut-api"
version = "0.1.0"
requires-python = ">=3.11"
# HTTP API、参数校验、数据库访问和上传处理所需的核心依赖。
dependencies = [
  "fastapi>=0.110",
  "cryptography>=43.0",
  "pydantic>=2.7",
  "SQLAlchemy>=2.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
  "redis>=5.0",
  "pymysql>=1.1",
]
